--- a/blogpessoal/pom.xml
+++ b/blogpessoal/pom.xml
@@ -48,6 +48,17 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+    		<version>2.6.6</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
+			
 	</dependencies>
 
 	<build>
