--- a/blogpessoal/src/main/resources/application.properties
+++ b/blogpessoal/src/main/resources/application.properties
@@ -5,6 +5,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.use-root-path=true
-springdoc.packagesToScan=com.generation.blogpessoal.controller
+springdoc.packagesToScan=org.generation.blogpessoal.controller
 
 
